--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     </h1>
     <ol>
         What is love?
-            <ul>Baby dont hurt me</ul>
-            <ul>Don't hurt me, no more</ul>
+            <ul><li><span>Baby dont hurt me</span></li></ul>
+            <ul><li><span>Don't hurt me, no more</span></li></ul>
         Ladies and gentleman
-            <ul>We are gathered here today</ul>
-            <ul>To get through this thing called life</ul>
+            <ul><li><span>We are gathered here today</span></li></ul>
+            <ul><li><span>To get through this thing called life</span></li></ul>
         You used to get it in your fishnets
-            <ul>Now you only get it in your nightdress</ul>
-            <ul>Discarded all your naughty nights for niceness</ul>
+            <ul><li><span>Now you only get it in your nightdress</span></li></ul>
+            <ul><li><span>Discarded all your naughty nights for niceness</span></li></ul>
     </ol>
 </section>
 
@@ -124,10 +124,96 @@
 
 <seletion>
     <!-- for this prompt check the second one on top and the CSS file... -->
+     <!-- I had to make another list to separate then the CSS is only for that one list. -->
 </seletion>
 
+<selection>
+<p>Pseudo-classes are a way to push user interaction through differing information,
+or elements to move the user throughout the site. It reacts to all user input, like a hover.</p>
+</selection>
 
-        
+<selection>
+<p>The pseudo-class of the focus element on CSS helps the user focus on the link they are clinking,
+    before leaving the page.</p>
+</selection>
+
+<selection>
+    <h1>The very best taco bell drinks</h1>
+    <ul class="first">baja blast freeze</ul>
+    <ul class="middle">blue raspberry freeze</ul>
+    <ul class="last">wild cherry soda</ul>   
+</selection>
+
+<selection>
+    <h1>Here is a little story...</h1>
+    <p class="text-1">There was once a very sleep deprived 21 year-old.</p>
+    <p class="text-2">All she wanted to do was go to bed. But alas, there was too much homework to be done. </p>
+    <p class="text-3">So she stayed up all night, every night. Just working on projects.</p> 
+</selection>
+
+<selection>
+    <h1>So I went to Europe last month</h1>
+    <p>The place was amazing, except my US &#36; did not convert well to the EU &#8364;, so I had to find only stores that took card. </p>
+</selection>
+
+<selection>
+    <p>Is the movie the Parent Trap &lt; or &gt;than Harry Styles? Or do I just need sleep?</p>
+</selection>
+
+<selection>
+    <section class="card">
+    <div class="box"></div>
+    </section>
+    <p>This image looks really poorly cropped because its a portrait and a rectangle, not a box.
+        If I found a better shaped image it would look better.
+    </p>
+</selection>
+
+<selection>
+    <section class="card">
+        <div class="box2"></div>
+    </section>
+    
+</selection>
+
+<selection>
+    <p>The background positon makes the box that surrounding the image crop in the center. 
+        Size and repeat make it so if the imsge is not big enough for the box, 
+        it can not repeat or change size, or make it relative to the box.
+        They cause a visual change when they are aligned in different formats, in this case centered.</p>
+</selection>
+
+<selection>
+    <section class="card">
+    <div class="box3"></div>
+    </section>
+    <section class="card">
+    <div class="box4"></div>
+    </section>
+</selection>
+
+<selection>
+    <section class="wildcard">
+        <div class="box"></div>
+    </section>
+</selection>
+
+<selection>
+    <p class="invisibleink"><span>Someone </span><span> send</span><span> help</span></p>
+</selection>
+
+<selection>
+    <pre style="color:red">e</pre><pre style="color:blue">b</pre><pre style="color:yellow">a</pre><pre style="color:green">y</pre>
+</selection>
+
+<selection>
+    <img src="mushroom.jpeg" class="mushroom">
+</selection>
+
+<selection>
+    <img src="ughhh.jpeg" class="filter">
+
+</selection>
     </body>
 </html>
 
